feat: Add folder customization and batch delete for SSH host manager
Allow users to customize folder appearance and manage hosts in bulk:

Database & Types:
- Add sshFolders table with color and icon fields for folder metadata
- Add SSHFolder interface to types with userId, name, color, icon fields
- Update folder rename route to also update folder metadata

API Endpoints:
- GET /ssh/folders - Fetch all folders with metadata for user
- PUT /ssh/folders/metadata - Create or update folder color and icon
- DELETE /ssh/folders/:name/hosts - Delete all hosts in a folder and folder metadata

Frontend Features:
- Create FolderEditDialog component with color picker (8 colors) and icon selector (10 icons)
- Add folder metadata state management in HostManagerViewer
- Display custom folder colors and icons in host manager UI
- Add "Edit Folder Appearance" button with palette icon
- Add "Delete All Hosts in Folder" button with trash icon and confirmation
- Fetch and sync folder metadata on component mount and refresh

API Functions:
- getSSHFolders() - Retrieve all folder metadata
- updateFolderMetadata(name, color, icon) - Update folder appearance
- deleteAllHostsInFolder(folderName) - Batch delete with count return

i18n Support:
- Add translations for folder customization (en, zh)
- Add batch delete confirmation messages
- Add success/error toast messages

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -754,6 +754,17 @@
     "failedToRemoveFromFolder": "Failed to remove host from folder",
     "folderRenamed": "Folder \"{{oldName}}\" renamed to \"{{newName}}\" successfully",
     "failedToRenameFolder": "Failed to rename folder",
+    "editFolderAppearance": "Edit Folder Appearance",
+    "editFolderAppearanceDesc": "Customize the color and icon for folder",
+    "folderColor": "Folder Color",
+    "folderIcon": "Folder Icon",
+    "preview": "Preview",
+    "folderAppearanceUpdated": "Folder appearance updated successfully",
+    "failedToUpdateFolderAppearance": "Failed to update folder appearance",
+    "deleteAllHostsInFolder": "Delete All Hosts in Folder",
+    "confirmDeleteAllHostsInFolder": "Are you sure you want to delete all {{count}} hosts in folder \"{{folder}}\"? This action cannot be undone.",
+    "allHostsInFolderDeleted": "Deleted {{count}} hosts from folder \"{{folder}}\" successfully",
+    "failedToDeleteHostsInFolder": "Failed to delete hosts in folder",
     "movedToFolder": "Host \"{{name}}\" moved to \"{{folder}}\" successfully",
     "failedToMoveToFolder": "Failed to move host to folder",
     "statistics": "Statistics",
