--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -766,6 +766,17 @@
     "failedToRemoveFromFolder": "从文件夹中移除主机失败",
     "folderRenamed": "文件夹\"{{oldName}}\"已成功重命名为\"{{newName}}\"",
     "failedToRenameFolder": "重命名文件夹失败",
+    "editFolderAppearance": "编辑文件夹外观",
+    "editFolderAppearanceDesc": "自定义文件夹的颜色和图标",
+    "folderColor": "文件夹颜色",
+    "folderIcon": "文件夹图标",
+    "preview": "预览",
+    "folderAppearanceUpdated": "文件夹外观更新成功",
+    "failedToUpdateFolderAppearance": "更新文件夹外观失败",
+    "deleteAllHostsInFolder": "删除文件夹内所有主机",
+    "confirmDeleteAllHostsInFolder": "确定要删除文件夹\"{{folder}}\"中的全部 {{count}} 个主机吗？此操作无法撤销。",
+    "allHostsInFolderDeleted": "已成功从文件夹\"{{folder}}\"删除 {{count}} 个主机",
+    "failedToDeleteHostsInFolder": "删除文件夹中的主机失败",
     "movedToFolder": "主机\"{{name}}\"已成功移动到\"{{folder}}\"",
     "failedToMoveToFolder": "移动主机到文件夹失败",
     "statistics": "统计",
