--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -915,6 +915,10 @@
     "connectToSsh": "连接 SSH 以使用文件操作",
     "uploadFile": "上传文件",
     "downloadFile": "下载",
+    "extractArchive": "解压文件",
+    "extractingArchive": "正在解压 {{name}}...",
+    "archiveExtractedSuccessfully": "{{name}} 解压成功",
+    "extractFailed": "解压失败",
     "edit": "编辑",
     "preview": "预览",
     "previous": "上一页",
