--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -47,12 +47,12 @@
     "general": "Général",
     "description": "Description",
     "folder": "Dossier",
-    "tags": "Étiquettes",
-    "addTagsSpaceToAdd": "Ajouter des étiquettes (appuyez sur espace pour valider)",
+    "tags": "Labels",
+    "addTagsSpaceToAdd": "Ajouter des labels (appuyez sur espace pour valider)",
     "password": "Mot de passe",
     "key": "Clé",
     "sshPrivateKey": "Clé privée SSH",
-    "upload": "Téléverser",
+    "upload": "Importer",
     "updateKey": "Mettre à jour la clé",
     "keyPassword": "Mot de passe de la clé",
     "keyType": "Type de clé",
@@ -66,7 +66,7 @@
     "basicInformationDescription": "Indiquez les informations de base pour cet identifiant",
     "authenticationMethod": "Méthode d'authentification",
     "authenticationMethodDescription": "Choisissez comment vous souhaitez vous authentifier sur les serveurs SSH",
-    "organizationDescription": "Organisez vos identifiants avec des dossiers et des étiquettes",
+    "organizationDescription": "Organisez vos identifiants avec des dossiers et des labels",
     "enterCredentialName": "Saisissez le nom de l'identifiant",
     "enterCredentialDescription": "Saisissez une description (facultatif)",
     "enterUsername": "Saisissez le nom d'utilisateur",
@@ -85,7 +85,7 @@
     "enterKeyPassphrase": "Saisissez la phrase secrète (facultatif)",
     "keyPassphraseOptional": "Facultatif : laissez vide si votre clé n'a pas de phrase secrète",
     "leaveEmptyToKeepCurrent": "Laissez vide pour conserver la valeur actuelle",
-    "uploadKeyFile": "Téléverser un fichier de clé",
+    "uploadKeyFile": "Importer un fichier de clé",
     "generateKeyPairButton": "Générer une paire de clés",
     "generateKeyPair": "Générer une paire de clés",
     "generateKeyPairDescription": "Générez une nouvelle paire de clés SSH. Si vous souhaitez protéger la clé avec une phrase secrète, saisissez-la d'abord dans le champ Mot de passe de la clé ci-dessous.",
@@ -106,7 +106,7 @@
     "selectOrCreateFolder": "Sélectionnez ou créez un dossier",
     "noFolder": "Aucun dossier",
     "orCreateNewFolder": "Ou créer un nouveau dossier",
-    "addTag": "Ajouter une étiquette",
+    "addTag": "Ajouter un label",
     "saving": "Enregistrement...",
     "overview": "Vue d'ensemble",
     "security": "Sécurité",
@@ -145,9 +145,9 @@
     "sshPublicKey": "Clé publique SSH",
     "publicKeyNote": "La clé publique est facultative mais recommandée pour valider la clé",
     "publicKeyUploaded": "Clé publique téléversée",
-    "uploadPublicKey": "Téléverser la clé publique",
-    "uploadPrivateKeyFile": "Téléverser le fichier de clé privée",
-    "uploadPublicKeyFile": "Téléverser le fichier de clé publique",
+    "uploadPublicKey": "Importer la clé publique",
+    "uploadPrivateKeyFile": "Importer le fichier de clé privée",
+    "uploadPublicKeyFile": "Importer le fichier de clé publique",
     "privateKeyRequiredForGeneration": "La clé privée est nécessaire pour générer la clé publique",
     "failedToGeneratePublicKey": "Échec de la génération de la clé publique",
     "generatePublicKey": "Générer à partir de la clé privée",
@@ -628,7 +628,7 @@
     "name": "Nom",
     "username": "Nom d'utilisateur",
     "folder": "Dossier",
-    "tags": "Étiquettes",
+    "tags": "Labels",
     "pin": "Épingler",
     "passwordRequired": "Le mot de passe est requis avec l'authentification par mot de passe",
     "sshKeyRequired": "La clé privée SSH est requise avec l'authentification par clé",
@@ -679,7 +679,7 @@
     "allowTcpForwardingYes": "pour autoriser le transfert de ports",
     "permitRootLoginYes": "si vous utilisez l'utilisateur root pour le tunneling",
     "editSshConfig": "Modifiez /etc/ssh/sshd_config et redémarrez SSH : sudo systemctl restart sshd",
-    "upload": "Téléverser",
+    "upload": "Importer",
     "authentication": "Authentification",
     "password": "Mot de passe",
     "key": "Clé",
@@ -701,12 +701,12 @@
     "dsa": "DSA",
     "rsaSha2256": "RSA SHA2-256",
     "rsaSha2512": "RSA SHA2-512",
-    "uploadFile": "Téléverser un fichier",
+    "uploadFile": "Importer un fichier",
     "pasteKey": "Coller la clé",
     "updateKey": "Mettre à jour la clé",
     "existingKey": "Clé existante (cliquez pour modifier)",
     "existingCredential": "Identifiant existant (cliquez pour modifier)",
-    "addTagsSpaceToAdd": "ajouter des étiquettes (espace pour valider)",
+    "addTagsSpaceToAdd": "ajouter des labels (espace pour valider)",
     "terminalBadge": "Terminal",
     "tunnelBadge": "Tunnel",
     "fileManagerBadge": "Gestionnaire de fichiers",
@@ -725,7 +725,7 @@
     "enableDisk": "Utilisation disque",
     "enableNetwork": "Statistiques réseau (bientôt)",
     "enableProcesses": "Nombre de processus (bientôt)",
-    "enableUptime": "Temps de fonctionnement (bientôt)",
+    "enableUptime": "Durée de fonctionnement (bientôt)",
     "enableHostname": "Nom d'hôte (bientôt)",
     "enableOs": "Système d'exploitation (bientôt)",
     "customCommands": "Commandes personnalisées (bientôt)",
@@ -810,7 +810,7 @@
     "file": "Fichier",
     "folder": "Dossier",
     "connectToSsh": "Connectez-vous en SSH pour utiliser les opérations sur les fichiers",
-    "uploadFile": "Téléverser un fichier",
+    "uploadFile": "Importer un fichier",
     "downloadFile": "Télécharger",
     "edit": "Modifier",
     "preview": "Aperçu",
@@ -825,7 +825,7 @@
     "renameItem": "Renommer l'élément",
     "deleteItem": "Supprimer l'élément",
     "currentPath": "Chemin actuel",
-    "uploadFileTitle": "Téléverser un fichier",
+    "uploadFileTitle": "Importer un fichier",
     "maxFileSize": "Max : 1 Go (JSON) / 5 Go (binaire) - gros fichiers pris en charge",
     "removeFile": "Retirer le fichier",
     "clickToSelectFile": "Cliquez pour sélectionner un fichier",
@@ -870,12 +870,12 @@
     "itemDeletedSuccessfully": "{{type}} supprimé avec succès",
     "itemsDeletedSuccessfully": "{{count}} éléments supprimés avec succès",
     "failedToDeleteItems": "Échec de la suppression des éléments",
-    "dragFilesToUpload": "Déposez des fichiers ici pour les téléverser",
+    "dragFilesToUpload": "Déposez des fichiers ici pour les importer",
     "emptyFolder": "Ce dossier est vide",
     "itemCount": "{{count}} éléments",
     "selectedCount": "{{count}} sélectionné(s)",
     "searchFiles": "Rechercher des fichiers...",
-    "upload": "Téléverser",
+    "upload": "Importer",
     "selectHostToStart": "Sélectionnez un hôte pour démarrer la gestion des fichiers",
     "failedToConnect": "Échec de la connexion SSH",
     "failedToLoadDirectory": "Échec du chargement du répertoire",
@@ -951,7 +951,7 @@
     "sshReconnectionTimeout": "Expiration du délai de reconnexion SSH",
     "saveOperationTimeout": "Expiration du délai d'enregistrement",
     "cannotSaveFile": "Impossible d'enregistrer le fichier",
-    "dragSystemFilesToUpload": "Faites glisser des fichiers système ici pour les téléverser",
+    "dragSystemFilesToUpload": "Faites glisser des fichiers système ici pour les importer",
     "dragFilesToWindowToDownload": "Faites glisser les fichiers hors de la fenêtre pour les télécharger",
     "openTerminalHere": "Ouvrir un terminal ici",
     "run": "Exécuter",
@@ -1129,7 +1129,7 @@
     "memory": "Mémoire",
     "disk": "Disque",
     "network": "Réseau",
-    "uptime": "Disponibilité",
+    "uptime": "Durée de fonctionnement",
     "loadAverage": "Moy. : {{avg1}}, {{avg5}}, {{avg15}}",
     "processes": "Processus",
     "connections": "Connexions",
@@ -1380,7 +1380,7 @@
     "pastePublicKey": "Collez votre clé publique ici...",
     "credentialName": "Mon serveur SSH",
     "description": "Description de l'identifiant SSH",
-    "searchCredentials": "Recherchez des identifiants par nom, utilisateur ou étiquettes...",
+    "searchCredentials": "Recherchez des identifiants par nom, utilisateur ou labels...",
     "sshConfig": "configuration SSH de destination",
     "homePath": "/home",
     "clientId": "votre-client-id",
@@ -1393,7 +1393,7 @@
     "scopes": "openid email profile",
     "userinfoUrl": "https://votre-fournisseur.com/application/o/userinfo/",
     "enterUsername": "Saisissez le nom d'utilisateur à promouvoir administrateur",
-    "searchHosts": "Recherchez des hôtes par nom, utilisateur, IP, dossier, étiquettes...",
+    "searchHosts": "Recherchez des hôtes par nom, utilisateur, IP, dossier, labels...",
     "enterPassword": "Entrez votre mot de passe",
     "totpCode": "Code TOTP à 6 chiffres",
     "searchHostsAny": "Recherchez des hôtes avec n'importe quelle info...",
@@ -1436,7 +1436,7 @@
     "noTunnelConnections": "Aucune connexion de tunnel configurée",
     "discord": "Discord",
     "connectToSshForOperations": "Connectez-vous en SSH pour utiliser les opérations sur les fichiers",
-    "uploadFile": "Téléverser un fichier",
+    "uploadFile": "Importer un fichier",
     "newFile": "Nouveau fichier",
     "newFolder": "Nouveau dossier",
     "rename": "Renommer",
@@ -1503,7 +1503,7 @@
     "defaultPath": "Chemin par défaut",
     "tunnelConnections": "Connexions de tunnel",
     "maxRetries": "Nombre max de tentatives",
-    "upload": "Téléverser",
+    "upload": "Importer",
     "updateKey": "Mettre à jour la clé",
     "productionFolder": "Production",
     "databaseServer": "Serveur de base de données",
@@ -1549,13 +1549,13 @@
     "version": "Version logicielle",
     "upToDate": "À jour",
     "updateAvailable": "Mise à jour disponible",
-    "uptime": "Disponibilité",
+    "uptime": "Durée de fonctionnement",
     "database": "Base de données",
     "healthy": "Opérationnel",
     "error": "Erreur",
-    "totalServers": "Total de serveurs",
-    "totalTunnels": "Total de tunnels",
-    "totalCredentials": "Total d'identifiants",
+    "totalServers": "Serveurs",
+    "totalTunnels": "Tunnels",
+    "totalCredentials": "Identifiants",
     "recentActivity": "Activité récente",
     "reset": "Réinitialiser",
     "loadingRecentActivity": "Chargement de l'activité récente...",
