fix: Merge zac/luke

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -755,6 +755,17 @@
     "failedToRemoveFromFolder": "Failed to remove host from folder",
     "folderRenamed": "Folder \"{{oldName}}\" renamed to \"{{newName}}\" successfully",
     "failedToRenameFolder": "Failed to rename folder",
+    "editFolderAppearance": "Edit Folder Appearance",
+    "editFolderAppearanceDesc": "Customize the color and icon for folder",
+    "folderColor": "Folder Color",
+    "folderIcon": "Folder Icon",
+    "preview": "Preview",
+    "folderAppearanceUpdated": "Folder appearance updated successfully",
+    "failedToUpdateFolderAppearance": "Failed to update folder appearance",
+    "deleteAllHostsInFolder": "Delete All Hosts in Folder",
+    "confirmDeleteAllHostsInFolder": "Are you sure you want to delete all {{count}} hosts in folder \"{{folder}}\"? This action cannot be undone.",
+    "allHostsInFolderDeleted": "Deleted {{count}} hosts from folder \"{{folder}}\" successfully",
+    "failedToDeleteHostsInFolder": "Failed to delete hosts in folder",
     "movedToFolder": "Host \"{{name}}\" moved to \"{{folder}}\" successfully",
     "failedToMoveToFolder": "Failed to move host to folder",
     "statistics": "Statistics",
@@ -895,6 +906,22 @@
     "connectToSsh": "Connect to SSH to use file operations",
     "uploadFile": "Upload File",
     "downloadFile": "Download",
+    "extractArchive": "Extract Archive",
+    "extractingArchive": "Extracting {{name}}...",
+    "archiveExtractedSuccessfully": "{{name}} extracted successfully",
+    "extractFailed": "Extract failed",
+    "compressFile": "Compress File",
+    "compressFiles": "Compress Files",
+    "compressFilesDesc": "Compress {{count}} items into an archive",
+    "archiveName": "Archive Name",
+    "enterArchiveName": "Enter archive name...",
+    "compressionFormat": "Compression Format",
+    "selectedFiles": "Selected files",
+    "andMoreFiles": "and {{count}} more...",
+    "compress": "Compress",
+    "compressingFiles": "Compressing {{count}} items into {{name}}...",
+    "filesCompressedSuccessfully": "{{name}} created successfully",
+    "compressFailed": "Compression failed",
     "edit": "Edit",
     "preview": "Preview",
     "previous": "Previous",
@@ -1172,7 +1199,19 @@
     "sshConnectionFailed": "SSH connection failed. Please check your connection to {{name}} ({{ip}}:{{port}})",
     "loadFileFailed": "Failed to load file: {{error}}",
     "connectedSuccessfully": "Connected successfully",
-    "totpVerificationFailed": "TOTP verification failed"
+    "totpVerificationFailed": "TOTP verification failed",
+    "changePermissions": "Change Permissions",
+    "changePermissionsDesc": "Modify file permissions for",
+    "currentPermissions": "Current Permissions",
+    "newPermissions": "New Permissions",
+    "owner": "Owner",
+    "group": "Group",
+    "others": "Others",
+    "read": "Read",
+    "write": "Write",
+    "execute": "Execute",
+    "permissionsChangedSuccessfully": "Permissions changed successfully",
+    "failedToChangePermissions": "Failed to change permissions"
   },
   "tunnels": {
     "title": "SSH Tunnels",
@@ -1482,6 +1521,8 @@
     "local": "Local",
     "external": "External (OIDC)",
     "selectPreferredLanguage": "Select your preferred language for the interface",
+    "fileColorCoding": "File Color Coding",
+    "fileColorCodingDesc": "Color-code files by type: folders (red), files (blue), symlinks (green)",
     "currentPassword": "Current Password",
     "passwordChangedSuccess": "Password changed successfully! Please log in again.",
     "failedToChangePassword": "Failed to change password. Please check your current password and try again."
