--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -766,6 +766,17 @@
     "failedToRemoveFromFolder": "从文件夹中移除主机失败",
     "folderRenamed": "文件夹\"{{oldName}}\"已成功重命名为\"{{newName}}\"",
     "failedToRenameFolder": "重命名文件夹失败",
+    "editFolderAppearance": "编辑文件夹外观",
+    "editFolderAppearanceDesc": "自定义文件夹的颜色和图标",
+    "folderColor": "文件夹颜色",
+    "folderIcon": "文件夹图标",
+    "preview": "预览",
+    "folderAppearanceUpdated": "文件夹外观更新成功",
+    "failedToUpdateFolderAppearance": "更新文件夹外观失败",
+    "deleteAllHostsInFolder": "删除文件夹内所有主机",
+    "confirmDeleteAllHostsInFolder": "确定要删除文件夹\"{{folder}}\"中的全部 {{count}} 个主机吗？此操作无法撤销。",
+    "allHostsInFolderDeleted": "已成功从文件夹\"{{folder}}\"删除 {{count}} 个主机",
+    "failedToDeleteHostsInFolder": "删除文件夹中的主机失败",
     "movedToFolder": "主机\"{{name}}\"已成功移动到\"{{folder}}\"",
     "failedToMoveToFolder": "移动主机到文件夹失败",
     "statistics": "统计",
@@ -904,6 +915,22 @@
     "connectToSsh": "连接 SSH 以使用文件操作",
     "uploadFile": "上传文件",
     "downloadFile": "下载",
+    "extractArchive": "解压文件",
+    "extractingArchive": "正在解压 {{name}}...",
+    "archiveExtractedSuccessfully": "{{name}} 解压成功",
+    "extractFailed": "解压失败",
+    "compressFile": "压缩文件",
+    "compressFiles": "压缩文件",
+    "compressFilesDesc": "将 {{count}} 个项目压缩为归档文件",
+    "archiveName": "归档文件名",
+    "enterArchiveName": "输入归档文件名...",
+    "compressionFormat": "压缩格式",
+    "selectedFiles": "已选文件",
+    "andMoreFiles": "以及其他 {{count}} 个...",
+    "compress": "压缩",
+    "compressingFiles": "正在将 {{count}} 个项目压缩到 {{name}}...",
+    "filesCompressedSuccessfully": "{{name}} 创建成功",
+    "compressFailed": "压缩失败",
     "edit": "编辑",
     "preview": "预览",
     "previous": "上一页",
@@ -1151,7 +1178,19 @@
     "sshConnectionFailed": "SSH 连接失败。请检查与 {{name}} ({{ip}}:{{port}}) 的连接",
     "loadFileFailed": "加载文件失败：{{error}}",
     "connectedSuccessfully": "连接成功",
-    "totpVerificationFailed": "TOTP 验证失败"
+    "totpVerificationFailed": "TOTP 验证失败",
+    "changePermissions": "修改权限",
+    "changePermissionsDesc": "修改文件权限",
+    "currentPermissions": "当前权限",
+    "newPermissions": "新权限",
+    "owner": "所有者",
+    "group": "组",
+    "others": "其他",
+    "read": "读取",
+    "write": "写入",
+    "execute": "执行",
+    "permissionsChangedSuccessfully": "权限修改成功",
+    "failedToChangePermissions": "权限修改失败"
   },
   "tunnels": {
     "title": "SSH 隧道",
@@ -1442,6 +1481,8 @@
     "local": "本地",
     "external": "外部 (OIDC)",
     "selectPreferredLanguage": "选择您的界面首选语言",
+    "fileColorCoding": "文件颜色编码",
+    "fileColorCodingDesc": "按类型对文件进行颜色编码：文件夹（红色）、文件（蓝色）、符号链接（绿色）",
     "currentPassword": "当前密码",
     "passwordChangedSuccess": "密码修改成功！请重新登录。",
     "failedToChangePassword": "修改密码失败。请检查您当前的密码并重试。"
