--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -482,6 +482,26 @@
     "confirmRevokeAllSessions": "Are you sure you want to revoke all sessions for this user?",
     "failedToRevokeSessions": "Failed to revoke sessions",
     "sessionsRevokedSuccessfully": "Sessions revoked successfully",
+    "convertToPasswordAuth": "Convert to Password Authentication",
+    "convertOIDCToPassword": "Convert {{username}} from OIDC/SSO authentication to password-based authentication. This will allow the user to log in with a username and password instead of through an external provider.",
+    "convertUserDialogTitle": "Convert to Password Authentication",
+    "convertUserDialogDescription": "This action will set a new password, disable OIDC/SSO login, log out all sessions, and preserve all user data.",
+    "convertActionWillSetPassword": "Set a new password for this user",
+    "convertActionWillDisableOIDC": "Disable OIDC/SSO login for this account",
+    "convertActionWillLogout": "Log out all active sessions",
+    "convertActionWillPreserveData": "Preserve all user data (SSH hosts, credentials, etc.)",
+    "convertPasswordLabel": "New Password (min 8 chars)",
+    "convertPasswordPlaceholder": "Enter new password",
+    "convertTotpLabel": "TOTP Code (if user has 2FA enabled)",
+    "convertTotpPlaceholder": "000000",
+    "convertUserButton": "Convert User",
+    "convertingUser": "Converting...",
+    "userConvertedSuccessfully": "User {{username}} has been converted to password authentication. All sessions have been revoked.",
+    "failedToConvertUser": "Failed to convert user account",
+    "convertPasswordRequired": "Password is required",
+    "convertPasswordTooShort": "Password must be at least 8 characters long",
+    "convertTotpRequired": "TOTP code is required for this user",
+    "convertToPasswordTitle": "Convert to password authentication",
     "databaseSecurity": "Database Security",
     "encryptionStatus": "Encryption Status",
     "encryptionEnabled": "Encryption Enabled",
@@ -860,7 +880,16 @@
     "forceKeyboardInteractive": "Force Keyboard-Interactive",
     "forceKeyboardInteractiveDesc": "Forces the use of keyboard-interactive authentication. This is often required for servers that use Two-Factor Authentication (TOTP/2FA).",
     "overrideCredentialUsername": "Override Credential Username",
-    "overrideCredentialUsernameDesc": "Use a different username than the one stored in the credential. This allows you to use the same credential with different usernames."
+    "overrideCredentialUsernameDesc": "Use a different username than the one stored in the credential. This allows you to use the same credential with different usernames.",
+    "jumpHosts": "Jump Hosts",
+    "jumpHostsDescription": "Jump hosts (also known as bastion hosts) allow you to connect to a target server through one or more intermediate servers. This is useful for accessing servers behind firewalls or in private networks.",
+    "jumpHostChain": "Jump Host Chain",
+    "addJumpHost": "Add Jump Host",
+    "selectServer": "Select Server",
+    "searchServers": "Search servers...",
+    "noServerFound": "No server found",
+    "jumpHostsOrder": "Connections will be made in order: Jump Host 1 → Jump Host 2 → ... → Target Server",
+    "advancedAuthSettings": "Advanced Authentication Settings"
   },
   "terminal": {
     "title": "Terminal",
