--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -831,7 +831,20 @@
     "snippetNone": "Нет",
     "noneAuthTitle": "Интерактивная аутентификация по клавиатуре",
     "noneAuthDescription": "Этот метод аутентификации будет использовать интерактивную аутентификацию по клавиатуре при подключении к SSH-серверу.",
-    "noneAuthDetails": "Интерактивная аутентификация по клавиатуре позволяет серверу запрашивать у вас учетные данные во время подключения. Это полезно для серверов, которые требуют многофакторную аутентификацию или динамический ввод пароля."
+    "noneAuthDetails": "Интерактивная аутентификация по клавиатуре позволяет серверу запрашивать у вас учетные данные во время подключения. Это полезно для серверов, которые требуют многофакторную аутентификацию или динамический ввод пароля.",
+    "forceKeyboardInteractive": "Принудительная клавиатурная аутентификация",
+    "forceKeyboardInteractiveDesc": "Принудительно использует интерактивную аутентификацию по клавиатуре. Часто требуется для серверов с двухфакторной аутентификацией (TOTP/2FA).",
+    "overrideCredentialUsername": "Переопределить имя пользователя учетных данных",
+    "overrideCredentialUsernameDesc": "Используйте другое имя пользователя, отличное от того, что хранится в учетных данных. Это позволяет использовать одни и те же учетные данные с разными именами пользователей.",
+    "jumpHosts": "Промежуточные хосты",
+    "jumpHostsDescription": "Промежуточные хосты (также известные как бастионы) позволяют подключаться к целевому серверу через один или несколько промежуточных серверов. Это полезно для доступа к серверам за брандмауэрами или в частных сетях.",
+    "jumpHostChain": "Цепочка промежуточных хостов",
+    "addJumpHost": "Добавить промежуточный хост",
+    "selectServer": "Выбрать сервер",
+    "searchServers": "Поиск серверов...",
+    "noServerFound": "Сервер не найден",
+    "jumpHostsOrder": "Подключения будут выполнены в порядке: Промежуточный хост 1 → Промежуточный хост 2 → ... → Целевой сервер",
+    "advancedAuthSettings": "Расширенные настройки аутентификации"
   },
   "terminal": {
     "title": "Терминал",
